@@ -12,7 +12,7 @@
 
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
-    <version>2.3.5</version>
+    <version>2.3.6-SNAPSHOT</version>
 
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
