@@ -156,17 +156,38 @@ public class SSOProfileHandler extends AbstractSAML2ProfileHandler {
 
         LoginContext loginContext = HttpServletHelper.getLoginContext(getStorageService(),
                 servletContext, httpRequest);
-        if (loginContext == null || !(loginContext instanceof Saml2LoginContext)) {
-            log.debug("Incoming request does not contain a login context, processing as first leg of request");
-            performAuthentication(inTransport, outTransport);
-        } else if (loginContext.isPrincipalAuthenticated() || loginContext.getAuthenticationFailure() != null) {
-            log.debug("Incoming request contains a login context, processing as second leg of request");
+        
+        if(loginContext != null){
             HttpServletHelper.unbindLoginContext(getStorageService(), servletContext, httpRequest, httpResponse);
-            completeAuthenticationRequest((Saml2LoginContext)loginContext, inTransport, outTransport);
-        } else {
-            log.debug("Incoming request contained a login context but principal was not authenticated, processing as first leg of request");
-            performAuthentication(inTransport, outTransport);
+            
+            if(!(loginContext instanceof Saml2LoginContext)){
+                log.debug("Incoming request contained a login context but it was not a Saml2LoginContext, processing as first leg of request");
+                performAuthentication(inTransport, outTransport);
+                return;
+            }
+            
+            if(!loginContext.isPrincipalAuthenticated()){
+                log.debug("Incoming request contains a login context but principal was not authenticated, processing first leg of request");
+                performAuthentication(inTransport, outTransport);
+                return;
+            }
+            
+            if(loginContext.isPrincipalAuthenticated()){
+                log.debug("Incoming request contains a login context and indicates principal was authenticated, processing second leg of request");
+                completeAuthenticationRequest((Saml2LoginContext)loginContext, inTransport, outTransport);
+                return;
+            }
+            
+            if(loginContext.getAuthenticationFailure() != null){
+                log.debug("Incoming request contains a login context and indicates there was an error authenticating the principal, processing second leg of request");
+                completeAuthenticationRequest((Saml2LoginContext)loginContext, inTransport, outTransport);
+                return;
+            }
         }
+        
+        log.debug("Incoming request does not contain a login context, processing as first leg of request");
+        performAuthentication(inTransport, outTransport);
+        return;
     }
 
     /**
